cabal-version:       2.2

--------------------------------------------------------------------------------
name:                iolaus-crypto
version:             0.1.0.0
-- synopsis:
description:         Please see the README.md file.
license:             BSD-2-Clause
license-file:        LICENSE
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
copyright:           Copyright (c) 2019 Peter Jones
category:            Application
-- bug-reports:

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , base64-bytestring           >= 1.0   && < 1.1
               , binary                      >= 0.8   && < 1.0
               , bytestring                  >= 0.10  && < 0.11
               , cryptonite                  >= 0.25  && < 1.0
               , dhall                       >= 1.19  && < 2.0
               , iolaus-opaleye              >= 0.1   && < 0.2
               , lens                        >= 4.0   && < 5.0
               , memory                      >= 0.14  && < 1.0
               , mtl                         >= 2.2   && < 2.3
               , opaleye                     >= 0.6   && < 0.7
               , postgresql-simple           >= 0.5   && < 0.7
               , product-profunctors         >= 0.10  && < 0.11
               , text                        >= 1.2   && < 1.3
               , text-icu                    >= 0.7   && < 0.8
               , time                        >= 1.8   && < 2.0
               , transformers                >= 0.5   && < 0.6
               , zxcvbn-hs                   >= 0.2   && < 1.0


--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src

  exposed-modules:
    Iolaus.Crypto
      Iolaus.Crypto.Config
      Iolaus.Crypto.Error
      Iolaus.Crypto.IV
      Iolaus.Crypto.Key
      Iolaus.Crypto.Password
      Iolaus.Crypto.Salt
      Iolaus.Crypto.SaltedHash
      Iolaus.Crypto.Symmetric

  other-modules:
    Iolaus.Crypto.Encoding
    Iolaus.Crypto.Internal.IV
    Iolaus.Crypto.Internal.Key
    Iolaus.Crypto.Internal.Password
    Iolaus.Crypto.Password.Settings

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: hedgehog       >= 0.6 && < 1.1
               , iolaus-crypto
               , tasty          >= 1.1 && < 1.3
               , tasty-hedgehog >= 0.2 && < 1.1

  other-modules:
    Iolaus.Test.Crypto.Password
    Iolaus.Test.Crypto.Symmetric
