cabal-version:       2.2

--------------------------------------------------------------------------------
name:         iolaus-crypto
version:      0.1.0.0
synopsis:     Easy to use cryptography library loosely based on PKCS#11
license:      BSD-2-Clause
license-file: LICENSE
author:       Peter Jones <pjones@devalot.com>
maintainer:   Peter Jones <pjones@devalot.com>
copyright:    Copyright (c) 2019-2020 Peter Jones
homepage:     https://github.com/pjones/iolaus
bug-reports:  https://github.com/pjones/iolaus/issues
category:     Application

--------------------------------------------------------------------------------
description:
  Loosely based on the PKCS#11 API, this package provides a Classy
  MTL-style interface for cryptography along with a collection of
  useful types and functions (such as 'Password' and 'Salt').
  .
  To start, you probably want to review the "Iolaus.Crypto" module
  which includes the 'MonadCrypto' class and the collection of types
  mentioned above.
  .
  For software-based cryptography, take a look at the "Control.Monad.Crypto.Cryptonite"
  module and the <https://github.com/pjones/iolaus/blob/master/crypto/examples examples>.

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralisedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , asn1-encoding               >= 0.9   && < 0.10
               , asn1-types                  >= 0.3   && < 0.4
               , binary                      >= 0.8   && < 1.0
               , bytestring                  >= 0.10  && < 0.11
               , cryptonite                  >= 0.25  && < 1.0
               , directory                   >= 1.3   && < 1.4
               , filepath                    >= 1.4   && < 1.5
               , free                        >= 5.1   && < 5.2
               , hourglass                   >= 0.2   && < 0.3
               , iolaus-opaleye              >= 0.1   && < 0.2
               , lens                        >= 4.0   && < 5.0
               , memory                      >= 0.14  && < 1.0
               , mtl                         >= 2.2   && < 2.3
               , opaleye                     >= 0.6   && < 0.7
               , pem                         >= 0.2   && < 0.3
               , postgresql-simple           >= 0.5   && < 0.7
               , product-profunctors         >= 0.10  && < 0.11
               , safe-exceptions             >= 0.1   && < 0.2
               , text                        >= 1.2   && < 1.3
               , text-icu                    >= 0.7   && < 0.8
               , time                        >= 1.8   && < 2.0
               , transformers                >= 0.5   && < 0.6
               , unix-compat                 >= 0.5   && < 1.0
               , uuid-types                  >= 1.0   && < 1.1
               , x509                        >= 1.7   && < 1.8
               , zxcvbn-hs                   >= 0.3   && < 1.0

--------------------------------------------------------------------------------
library
  import: options, extensions, dependencies
  hs-source-dirs: src

  exposed-modules:
    Control.Monad.CertAuth.Class
    Control.Monad.Crypto.Class
    Control.Monad.Crypto.Cryptonite
    Iolaus.Crypto

  other-modules:
    Control.Monad.CertAuth.Internal
    Control.Monad.Crypto.Internal
    Control.Monad.Crypto.KeyAccess
    Iolaus.Crypto.Cryptonite.Asymmetric
    Iolaus.Crypto.Cryptonite.Symmetric
    Iolaus.Crypto.Encoding
    Iolaus.Crypto.Error
    Iolaus.Crypto.HashedSecret
    Iolaus.Crypto.Key
    Iolaus.Crypto.PEM
    Iolaus.Crypto.Password
    Iolaus.Crypto.Salt
    Iolaus.Crypto.SaltedHash
    Iolaus.Crypto.Secret
    Iolaus.Crypto.Signature

--------------------------------------------------------------------------------
executable symmetric
  import: options, dependencies
  hs-source-dirs: examples
  main-is: symmetric.hs
  build-depends: iolaus-crypto

--------------------------------------------------------------------------------
test-suite test
  import: options, extensions, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: containers     >= 0.6 && < 0.7
               , hedgehog       >= 0.6 && < 1.1
               , iolaus-crypto
               , tasty          >= 1.1  && < 1.3
               , tasty-hedgehog >= 0.2  && < 1.1
               , tasty-hunit    >= 0.10 && < 0.11

  other-modules:
    Iolaus.Test.Crypto.Password
    Iolaus.Test.Crypto.Cryptonite
    Iolaus.Test.Crypto.Keys
