cabal-version:       2.2

--------------------------------------------------------------------------------
name:                iolaus-opaleye
version:             0.1.0.0
synopsis:            Common bits of Opaleye that you need in all your apps.
description:         Please see the README.md file.
license:             BSD-2-Clause
license-file:        LICENSE
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
copyright:           Copyright (c) 2019 Peter Jones
category:            Application
-- bug-reports:

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  example/schema/*.sql

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , dhall                       >= 1.19  && < 2.0
               , ekg-core                    >= 0.1   && < 0.2
               , exceptions                  >= 0.10  && < 0.11
               , filepath                    >= 1.4   && < 1.5
               , lens                        >= 4.0   && < 5.0
               , mtl                         >= 2.2   && < 2.3
               , opaleye                     >= 0.6   && < 0.7
               , postgresql-simple           >= 0.5   && < 0.7
               , postgresql-simple-migration >= 0.1   && < 0.2
               , product-profunctors         >= 0.10  && < 0.11
               , resource-pool               >= 0.2   && < 0.3
               , retry                       >= 0.7   && < 0.9
               , template-haskell            >= 2.14  && < 2.15
               , text                        >= 1.2   && < 1.3
               , transformers                >= 0.5   && < 0.6

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Iolaus.Database
    Iolaus.Database.JSON
    Iolaus.Database.Newtype

  other-modules:
    Iolaus.Database.Config
    Iolaus.Database.Error

--------------------------------------------------------------------------------
executable example
  import: options, dependencies
  hs-source-dirs: example
  main-is: Main.hs
  build-depends: iolaus-opaleye

  other-modules:
    Paths_iolaus_opaleye

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: iolaus-opaleye
               , tasty          >= 1.1 &&  < 1.3
               , tasty-hunit    >= 0.10 && < 0.11

  other-modules:
    Iolaus.Test.Newtype
