cabal-version:       2.2

--------------------------------------------------------------------------------
name:                iolaus-opaleye
version:             0.1.0.0
synopsis:            A database effect built on top of Opaleye and fused-effects
license:             BSD-2-Clause
license-file:        LICENSE
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
copyright:           Copyright (c) 2019-2020 Peter Jones
category:            Application
-- bug-reports:
description:         Please see the README.md file.

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  example/schema/*.sql

--------------------------------------------------------------------------------
flag debug
  description: Enable Template Haskell debugging
  manual: True
  default: False

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

  if flag(debug)
    ghc-options: -ddump-splices

  default-extensions: ConstraintKinds
                      DataKinds
                      DeriveFunctor
                      DeriveGeneric
                      DerivingVia
                      DisambiguateRecordFields
                      DuplicateRecordFields
                      ExistentialQuantification
                      FlexibleContexts
                      FlexibleInstances
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      NamedFieldPuns
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections
                      TypeFamilies
                      TypeOperators

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , ekg-core                    >= 0.1   && < 0.2
               , exceptions                  >= 0.10  && < 0.11
               , filepath                    >= 1.4   && < 1.5
               , fused-effects               >= 1.0   && < 1.1
               , microlens                   >= 0.4   && < 0.5
               , microlens-th                >= 0.4   && < 0.5
               , opaleye                     >= 0.6   && < 0.7
               , postgresql-simple           >= 0.5   && < 0.7
               , postgresql-simple-migration >= 0.1   && < 0.2
               , product-profunctors         >= 0.10  && < 0.11
               , profunctors                 >= 5.3   && < 5.4
               , resource-pool               >= 0.2   && < 0.3
               , retry                       >= 0.7   && < 0.9
               , template-haskell            >= 2.14  && < 2.15
               , text                        >= 1.2   && < 1.3
               , uuid                        >= 1.3   && < 1.4

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Control.Carrier.Database
    Control.Effect.Database
    Iolaus.Database
    Iolaus.Database.Extra
    Iolaus.Database.JSON
    Iolaus.Database.Migrate
    Iolaus.Database.Newtype
    Iolaus.Database.Query
    Iolaus.Database.Table
  other-modules:
    Control.Carrier.Database.Internal
    Control.Effect.Database.Internal
    Iolaus.Database.Config
    Iolaus.Database.Error
    Iolaus.Database.Query.Internal
    Iolaus.Database.Runtime
    Iolaus.Database.Transaction
    Iolaus.Database.Table.Internal
    Iolaus.Database.Table.TH

--------------------------------------------------------------------------------
executable example
  import: options, dependencies
  hs-source-dirs: example
  main-is: Main.hs
  build-depends: iolaus-opaleye, list-transformer

  other-modules:
    Paths_iolaus_opaleye

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: iolaus-opaleye
               , tasty          >= 1.1 &&  < 1.3
               , tasty-hunit    >= 0.10 && < 0.11

  other-modules:
    Iolaus.Test.JSON
    Iolaus.Test.Newtype
    Iolaus.Test.Table
