cabal-version:       2.2

--------------------------------------------------------------------------------
name:         iolaus-opaleye
version:      0.1.0.0
synopsis:     A database effect built on top of Opaleye and the MTL
license:      BSD-2-Clause
license-file: LICENSE
author:       Peter Jones <pjones@devalot.com>
maintainer:   Peter Jones <pjones@devalot.com>
copyright:    Copyright (c) 2019-2020 Peter Jones
homepage:     https://github.com/pjones/iolaus
bug-reports:  https://github.com/pjones/iolaus/issues
category:     Application

--------------------------------------------------------------------------------
description:
  Using Opaleye as the query DSL, this package adds a Classy MTL
  interface for connecting to PostgreSQL, migrating the database
  schema, and managing a connection pool.
  .
  To get started, review the "Control.Monad.Database" module and then
  take a look at the <https://github.com/pjones/iolaus/blob/master/opaleye/example/Main.hs example>.
  .
  The other modules in this package provide additional features for
  your application.  For example, the "Iolaus.Database.Table" module
  include a type family for defining database tables as an alternative
  to the fully polymorphic style.

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  example/schema/*.sql

--------------------------------------------------------------------------------
flag debug
  description: Enable Template Haskell debugging
  manual: True
  default: False

--------------------------------------------------------------------------------
flag fused-effects
  description: Enable support for fused-effects
  manual: False
  default: True

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

  if flag(debug)
    ghc-options: -ddump-splices

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , ekg-core                    >= 0.1   && < 0.2
               , exceptions                  >= 0.10  && < 0.11
               , filepath                    >= 1.4   && < 1.5
               , free                        >= 5.1   && < 5.2
               , lens                        >= 4.0   && < 5.0
               , mtl                         >= 2.2   && < 2.3
               , opaleye                     >= 0.6   && < 0.7
               , postgresql-simple           >= 0.5   && < 0.7
               , postgresql-simple-migration >= 0.1   && < 0.2
               , product-profunctors         >= 0.10  && < 0.11
               , profunctors                 >= 5.3   && < 5.6
               , resource-pool               >= 0.2   && < 0.3
               , retry                       >= 0.7   && < 0.9
               , template-haskell            >= 2.14  && < 2.16
               , text                        >= 1.2   && < 1.3
               , transformers                >= 0.5   && < 0.6
               , uuid                        >= 1.3   && < 1.4

  if flag(fused-effects)
    build-depends: fused-effects >= 1.0 && < 1.1

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.Database
    Control.Monad.Database.Class
    Iolaus.Database.Config
    Iolaus.Database.Error
    Iolaus.Database.Extra
    Iolaus.Database.JSON
    Iolaus.Database.Newtype
    Iolaus.Database.Query
    Iolaus.Database.Table

  other-modules:
    Control.Monad.Database.Internal
    Iolaus.Database.Migrate
    Iolaus.Database.Query.Internal
    Iolaus.Database.Runtime
    Iolaus.Database.Table.Internal
    Iolaus.Database.Table.TH
    Iolaus.Database.Transaction

  if flag(fused-effects)
    exposed-modules:
      Control.Effect.Database
      Control.Carrier.Database
    other-modules:
      Control.Effect.Database.Internal

--------------------------------------------------------------------------------
executable example
  import: options, dependencies
  hs-source-dirs: example
  main-is: Main.hs
  build-depends: iolaus-opaleye, list-transformer

  other-modules:
    Paths_iolaus_opaleye

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: iolaus-opaleye
               , tasty          >= 1.1 &&  < 1.3
               , tasty-hunit    >= 0.10 && < 0.11

  other-modules:
    Iolaus.Test.JSON
    Iolaus.Test.Newtype
    Iolaus.Test.Table
