cabal-version:       2.2

--------------------------------------------------------------------------------
name:                iolaus-validation
version:             0.1.0.0
synopsis:            Data validation in any context
license:             BSD-2-Clause
license-file:        LICENSE
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
copyright:           Copyright (c) 2019 Peter Jones
category:            Application
-- bug-reports:
description:
  Data validation based on @digestive-functors@ and @menshen@.
  .
  Please see the README.md file.

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , aeson                       >= 1.3   && < 1.5
               , lens                        >= 4.0   && < 5.0
               , scientific                  >= 0.3   && < 0.4
               , text                        >= 1.2   && < 1.3
               , transformers                >= 0.5   && < 0.6
               , validation                  >= 1.1   && < 1.2

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src

  exposed-modules:
    Iolaus.Validation

  other-modules:
    Iolaus.Validation.Prim
    Iolaus.Validation.Assertions
    Iolaus.Validation.Error

--------------------------------------------------------------------------------
executable example-basic
  import: options, dependencies
  hs-source-dirs: examples
  main-is: Basic.hs
  build-depends: iolaus-validation

--------------------------------------------------------------------------------
executable example-monadic
  import: options, dependencies
  hs-source-dirs: examples
  main-is: Monadic.hs
  build-depends: iolaus-validation

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: iolaus-validation
               , tasty       >= 1.1  && < 1.3
               , tasty-hunit >= 0.10 && < 0.11
